# ecommerce_fastapi

./: pyproject.toml
ecommerce_fastapi/: app.py
tests/: test_app.py
