[tool.poetry]
name = "ecommerce-fastapi"
version = "0.1.0"
description = ""
authors = ["Mateus Meneses <mateusppa10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.111.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"

[tool.taskipy.tasks]
dev = "fastapi dev ecommerce_fastapi/app.py"

pre_test = "task lint"
test = "pytest -s -x --cov=ecommerce_fastapi -vv"
post_test = "coverage html"

lint = "ruff check . ; ruff check . --diff"
format = "ruff check . --fix ; ruff format ."


[tool.pytest.ini_options]
pythonpath = '.'
addopts = ["-p no:warnings"]

[tool.ruff]
line-length = 79
extend-exclude = ["migrations"]

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.ruff.format]
preview = true
quote-style = 'single'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
